rna_gizmo_target_set_prop reports incorrect propname #68557

Closed
opened 2019-08-11 23:08:32 +02:00 by gbayliss · 3 comments

System Information
Operating system: n/a
Graphics card: n/a

master
Broken: master since e12c08e8d1
Worked: (optional)

Attempting to set an invalid property in in the widget API causes a confusing error message. Fix shown below:

File: https://developer.blender.org/diffusion/B/browse/master/source/blender/makesrna/intern/rna_wm_gizmo_api.c
Line: 87-94

PropertyRNA *prop = RNA_struct_find_property(ptr, propname);
  if (prop == NULL) {
    BKE_reportf(reports,
                RPT_ERROR,
                "Property '%s.%s' not found",
                RNA_struct_identifier(ptr->type),
                target_propname); <----------------------- this should be propname
    return;
  }

It's also unintuitive that target is used to refer to the gizmo property, when target implicitly refers to a foreign class.

**System Information** Operating system: n/a Graphics card: n/a **master** Broken: master since e12c08e8d170 Worked: (optional) Attempting to set an invalid property in in the widget API causes a confusing error message. Fix shown below: File: https://developer.blender.org/diffusion/B/browse/master/source/blender/makesrna/intern/rna_wm_gizmo_api.c Line: 87-94 ``` PropertyRNA *prop = RNA_struct_find_property(ptr, propname); ``` if (prop == NULL) { BKE_reportf(reports, RPT_ERROR, "Property '%s.%s' not found", RNA_struct_identifier(ptr->type), target_propname); <----------------------- this should be propname return; } It's also unintuitive that target is used to refer to the gizmo property, when target implicitly refers to a foreign class.
Author

Added subscriber: @merlinstail

Added subscriber: @merlinstail

This issue was referenced by ef5bf8d67e

This issue was referenced by ef5bf8d67e7ed6909d53d1bda3696e2233fcd014

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Campbell Barton self-assigned this 2019-08-12 19:46:41 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68557
No description provided.