Fix T68557: Incorrect property reported in error

Error spotted by @gbayliss